--- a/src/css/style.css
+++ b/src/css/style.css
@@ -54,7 +54,7 @@ body {
   background-color: rgba(10, 10, 10, 0.3);
   max-width: 80vw;
   max-height: 80vh;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 /* loading */
