add fixed-point magification function, move version to 12.8

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,7 +64,10 @@ body {
 }
 .copper3D_drawingCanvasContainer {
   position: absolute;
-  background-color: rgba(10, 10, 10, 0.3);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  /* background-color: rgba(10, 10, 10, 0.3); */
   max-width: 80vw;
   max-height: 80vh;
   overflow: hidden;
